@@ -7,6 +7,7 @@ Bugs fixed:
 - 1614898 mofc coredumps for instance of undefined class
 - 1601274 new option --enable-namespace-kludge for legacy __namespace classes
 - 1624528 sfcb getclass doesn't return methods
+- 1616463 mofc doesn't process REF type properties
 
 Changes in 0.8.0
 ================
