@@ -1,6 +1,11 @@
+2007-01-04  Sven Schuetz
+
+	* backend_sfcb.c, symtab.c_
+	Fixed 1616463: mofc doesn't process REF type properties
+
 2007-01-03  Sven Schuetz
 
-	* backend_sfcb:
+	* backend_sfcb.c:
 	Partially fixed 1624528: sfcb getclass doesn't return methods
 
 2006-12-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
